--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
       </ul>
     </section>
     
+    <section id="La meilleure équipe d'étudiants">
+      <ul>
+        <a href="https://fr.linkedin.com/in/lucaguilliere"><li>Luca Guilliere</li></a>
+        <a href="https://www.linkedin.com/in/nolhan-tribout-b93907228/"><li>Nolhan Tribout</li></a>
+        <a href="https://www.linkedin.com/in/ilya-snacel-995253244/"><li>Ilya Snacel</li></a>
+      </ul>
+    </section>
+
     <section id="address">
       <h2>Adresses</h2>
       <ul>
